cyclonedx-bom/tests/spec/snapshots/1.4/it_should_parse_all_of_the_valid_xml_specifications@valid-service-1.4.xml.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_4.rs
expression: bom_output
input_file: cyclonedx-bom/tests/data/1.4/valid-service-1.4.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.4" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <components>
    <component type="library" bom-ref="pkg:maven/com.acme/stock-java-client@1.0.12">
      <group>com.acme</group>
      <name>stock-java-client</name>
      <version>1.0.12</version>
      <hashes>
        <hash alg="SHA-1">e6b1000b94e835ffd37f4c6dcbdad43f4b48a02a</hash>
      </hashes>
      <licenses>
        <license>
          <id>Apache-2.0</id>
        </license>
      </licenses>
      <purl>pkg:maven/com.acme/stock-java-client@1.0.12</purl>
    </component>
  </components>
  <services>
    <service bom-ref="b2a46a4b-8367-4bae-9820-95557cfe03a8">
      <provider>
        <name>Partner Org</name>
        <url>https://partner.org</url>
        <contact>
          <name>Support</name>
          <email>support@partner</email>
          <phone>800-555-1212</phone>
        </contact>
      </provider>
      <group>org.partner</group>
      <name>Stock ticker service</name>
      <version>2020-Q2</version>
      <description>Provides real-time stock information</description>
      <endpoints>
        <endpoint>https://partner.org/api/v1/lookup</endpoint>
        <endpoint>https://partner.org/api/v1/stock</endpoint>
      </endpoints>
      <authenticated>true</authenticated>
      <x-trust-boundary>true</x-trust-boundary>
      <data>
        <classification flow="inbound">PII</classification>
        <classification flow="outbound">PIFI</classification>
        <classification flow="bi-directional">pubic</classification>
        <classification flow="unknown">partner-data</classification>
      </data>
      <licenses>
        <license>
          <name>Partner license</name>
        </license>
      </licenses>
      <externalReferences>
        <reference type="website">
          <url>http://partner.org</url>
        </reference>
        <reference type="documentation">
          <url>http://api.partner.org/swagger</url>
        </reference>
      </externalReferences>
    </service>
  </services>
  <dependencies>
    <dependency ref="pkg:maven/com.acme/stock-java-client@1.0.12">
      <dependency ref="b2a46a4b-8367-4bae-9820-95557cfe03a8" />
    </dependency>
  </dependencies>
</bom>
